--- a/index.html
+++ b/index.html
@@ -135,23 +135,23 @@
 <section id="skills">
     <div class="container mt-3">
         <h1 class="text-center">Skills</h1>
-        <h4><strong>Problem-Solving Skills in Java</strong></h4>
+        <a href="https://leetcode.com/CR7_Vinay/"> <h4><strong>Problem-Solving Skills in Java</strong></h4></a>
         <div class="container">
         <div class="skills html">90%</div>
         </div>
     
-        <h4><strong>Web Development</strong></h4>
+        <a href="https://github.com/VINAYREDDY4466"><h4><strong>Web Development</strong></h4></a>
         <div class="container">
         <div class="skills css">80%</div>
         </div>
 
-        <h4><strong>Data Strutures and Algorthims</strong></h4>
+        <a href="https://leetcode.com/CR7_Vinay/"><h4><strong>Data Strutures and Algorthims</strong></h4></a>
         <div class="container">
         <div class="skills js">75%</div>
         </div>
 
         
-        <h4><strong>Data Base Mangement System(DBMS)</strong></h4>
+        <a href="https://www.codechef.com/users/vinayvrd123"><h4><strong>Data Base Mangement System(DBMS)</strong></h4></a>
         <div class="container">
         <div class="skills php">60%</div>
   
