--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
           
               <label for="lname">Email</label>
-              <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
+              <input type="text" id="lname" name="Enter your e-mail id" placeholder="Your last name.." required>
           
               <label for="country">Country</label>
               <select id="country" name="country">
