--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="./Screenshot 2024-01-08 185636.png .png" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="./Screenshot 2024-01-08 185636.png" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">Image gallery</h4>
                             <p class="card-text">The Image Gallery project is a simple yet effective way to showcase and navigate through a collection of images. The HTML structure defines a responsive layout, making it suitable for various devices. Users can easily navigate between sets of images using the provided back and next buttons.</p>
